--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,9 +12,9 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "c:/Users/Iceto/OneDrive/Desktop/Jacob/Arduino Projects/Arduino Blink - VS Code/.pio/build/uno/firmware.elf",
+            "executable": "C:/Users/Jack/Desktop/EECS388-Lab2/.pio/build/uno/firmware.elf",
             "projectEnvName": "uno",
-            "toolchainBinDir": "C:/Users/Iceto/.platformio/packages/toolchain-atmelavr/bin",
+            "toolchainBinDir": "C:/Users/Jack/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -25,18 +25,18 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "c:/Users/Iceto/OneDrive/Desktop/Jacob/Arduino Projects/Arduino Blink - VS Code/.pio/build/uno/firmware.elf",
+            "executable": "C:/Users/Jack/Desktop/EECS388-Lab2/.pio/build/uno/firmware.elf",
             "projectEnvName": "uno",
-            "toolchainBinDir": "C:/Users/Iceto/.platformio/packages/toolchain-atmelavr/bin",
+            "toolchainBinDir": "C:/Users/Jack/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "c:/Users/Iceto/OneDrive/Desktop/Jacob/Arduino Projects/Arduino Blink - VS Code/.pio/build/uno/firmware.elf",
+            "executable": "C:/Users/Jack/Desktop/EECS388-Lab2/.pio/build/uno/firmware.elf",
             "projectEnvName": "uno",
-            "toolchainBinDir": "C:/Users/Iceto/.platformio/packages/toolchain-atmelavr/bin",
+            "toolchainBinDir": "C:/Users/Jack/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
